# SoftwareDesignPatterns

./: .clang-format  CMakeLists.txt  imgui.ini
hw1/: CMakeLists.txt  main.cpp
hw1/include/: auditory.h  human.h  student.h  teacher.h
practice1/: CMakeLists.txt  main.cpp
practice1/include/: iprintable.h  iprinter.h  iprinter_delegate.h  text.h
practice1/src/: iprintable.cpp
practice1_static/: CMakeLists.txt  main.cpp
practice1_static/include/: printable.h  printer.h  printer_delegate.h
practice2/: CMakeLists.txt  main.cpp
practice2/include/initializers/: matrix_initializer.h
practice2/include/matrix/: amatrix.h  imatrix.h  matrix.h  sparse_matrix.h
practice2/include/pretty_printers/: printer.h
practice2/include/random_generator/: random_generator.h
practice2/include/statistica/: statistica.h
practice2/include/vector/: ivector.h  sparse_vector.h  vector.h
practice3/: CMakeLists.txt  main.cpp
practice3/include/app/: app.h
practice3/include/drawer/: default_drawer.h  idrawer.h  lazy_drawer.h
practice3/include/matrix_drawer/: amatrix_drawer.h  console_matrix_drawer.h  dense_matrix_drawer.h  graph_matrix_drawer.h  imatrix_drawer.h  sparse_matrix_drawer.h
practice3/include/serializers/: serializers.h
practice3/src/: app.cpp
practice4/: CMakeLists.txt  main.cpp
practice4/include/: idecorator.h  swap_decorator.h
